--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         Thanks for your patience while we finish up.
       </p>
       <div class="schedule">
-        Back online tomorrow at <strong>7:00&nbsp;AM IST</strong>
+        Back online tomorrow at <strong>7:00&nbsp;AM IST 20/11/2025</strong>
       </div>
       <p>
         We apologize for the inconvenience. Please check back at the scheduled time.
